[build-system]
requires = ["flit_core >=2,<3"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "fastapi_users_db_sqlalchemy_asyncpg"
dist-name = "fastapi-users-db-sqlalchemy-asyncpg"
author = "Jonathan Grahl"
author-email = "jonathan@keyholders.io"
home-page = "hhttps://github.com/BPL-Development-Team/fastapi-users-db-sqlalchemy"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Internet :: WWW/HTTP :: Session",
]
description-file = "README.md"
requires-python = ">=3.7"
requires = [
    "fastapi-users >= 6.1.3",
    "sqlalchemy >= 1.4",
    "sqlalchemy[asyncio] >= 1.4",
    "asyncpg >= 0.24"
]

[tool.flit.metadata.urls]
Documentation = "https://fastapi-users.github.io/fastapi-users"
